prevent project info overlapping in galery

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,7 +41,7 @@ color:#fff;position:absolute;top:50%;left:50%;margin:0 auto;-webkit-transform:tr
   max-width: 410px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 799px) {
   /* On mobile */
   .user-projects img {
     width: 80%;
@@ -53,6 +53,9 @@ color:#fff;position:absolute;top:50%;left:50%;margin:0 auto;-webkit-transform:tr
   .user-details h1 {margin: 0;}
 
   .about-text img {width: 80%; margin: auto;}
+
+  .galery ul {padding: 0;}
+  .galery li {margin-right: 5px;}
 }
 
 @media (min-width: 800px) {
@@ -68,8 +71,9 @@ color:#fff;position:absolute;top:50%;left:50%;margin:0 auto;-webkit-transform:tr
 .project-left img{float:left; margin-left: 30px;}
 .contents-info {display:flex; flex-flow: row wrap; align-items: flex-end;
   justify-content: space-between; }
-.contents-info li { text-align: initial; }
-.contents-info ul { margin-bottom: 8px; margin-top: 8px; }
+.contents-info li { text-align: initial; margin-left: 10px;}
+/* .contents-info ul { margin-bottom: 8px; margin-top: 8px; } */
+.contents-info ul { margin: 0; }
 .contents-info-1 { padding-left: 15px; }
 .contents-info-2 { padding-left: 20px; /*padding-right: 40px;*/ }
 
